<resources>
    <string name="app_name">MADbyBTD</string>
    <string name="desc_text">MADbyBTD is a volunteer-based student activist group working in Dehradun and Jodhpur on environment, poverty and to increase civic consciousness.</string>
    <string name="act">Activities</string>
    <string name="act_list">&#8226; Clean up drives\n&#8226; Wall Transformations\n&#8226; Policy initiatives\n&#8226; Madathon and much more</string>
    <string name="question1">How to get in touch?</string>
    <string name="answer1">Contact us on\n&#8226; Whatsapp : 7895395999\n&#8226; Mail : madbybtd@gmail.com</string>
</resources>