<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/mad_wall2" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/mad_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_text"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/logo_img"
            android:layout_marginLeft="18dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <ImageView
            android:id="@+id/act_logo"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/sapling" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@id/act_logo"
            android:text="@string/act_list"
            android:layout_centerVertical="true"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:layout_marginTop="5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/hi_logo"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/hi_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer1"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/hi_logo"
            android:layout_marginLeft="18dp"
            android:textSize="15sp"/>

    </RelativeLayout>

</LinearLayout>


<!--androidx.constraintlayout.widget.ConstraintLayout-->